--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-VUE_APP_I18N_LOCALE=vi
-VUE_APP_I18N_FALLBACK_LOCALE=en
-VUE_APP_API_SERVER_URL=https://dev-eparking-api.atis.vn/
-VUE_APP_API_SERVER_URL_EXPORT_EXCEL=https://dev-eparking-api.atis.vn/
-VUE_APP_METABASE_SERVER_URL=https://dev-wiot-metabase.atis.vn/
+VITE_APP_I18N_LOCALE=vi
+VITE_APP_I18N_FALLBACK_LOCALE=en
+VITE_APP_API_SERVER_URL=https://dev-eparking-api.atis.vn/
+VITE_APP_API_SERVER_URL_EXPORT_EXCEL=https://dev-eparking-api.atis.vn/
+VITE_APP_METABASE_SERVER_URL=https://dev-wiot-metabase.atis.vn/
 
