--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "ant-design-vue": "^4.0.3",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.2",
     "less-loader": "^11.1.3",
     "vue": "^3.3.4",
     "vue-ant-design": "^0.0.1",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.3.0",
     "vue-icons": "^2.0.0",
     "vue-router": "^4.2.4",
     "vue3-icon": "^2.1.0"
