--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_APP_I18N_LOCALE=vi
 VITE_APP_I18N_FALLBACK_LOCALE=en
-VITE_APP_API_SERVER_URL=https://dev-eparking-api.atis.vn/
-VITE_APP_API_SERVER_URL_EXPORT_EXCEL=https://dev-eparking-api.atis.vn/
-VITE_APP_METABASE_SERVER_URL=https://dev-wiot-metabase.atis.vn/
+VITE_APP_API_SERVER_URL=http://localhost:3000/api
+VITE_APP_API_SERVER_URL_EXPORT_EXCEL=http://localhost:3000/export-excel
+VITE_APP_METABASE_SERVER_URL=http://localhost:3000/metabase
