--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "ant-design-vue": "^4.0.3",
     "axios": "^1.5.1",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "5.3.1",
     "chart.js": "^4.4.2",
     "less-loader": "^11.1.3",
+    "simple-vue-camera": "^1.1.3",
+    "video.js": "^8.10.0",
     "vue": "^3.3.4",
     "vue-ant-design": "^0.0.1",
     "vue-axios": "^3.5.2",
