--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.1",
     "bootstrap": "5.3.1",
     "chart.js": "^4.4.2",
+    "leaflet": "^1.9.4",
     "less-loader": "^11.1.3",
     "simple-vue-camera": "^1.1.3",
     "video.js": "^8.10.0",
