--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "less": "^4.2.0",
+    "sass": "^1.74.1",
     "vite": "^4.4.5",
     "vite-plugin-vue": "^0.0.1",
     "vite-plugin-vue2": "^2.0.3"
