--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.9.4",
     "less-loader": "^11.1.3",
     "simple-vue-camera": "^1.1.3",
+    "socket.io-client": "^4.7.5",
     "video.js": "^8.10.0",
     "vue": "^3.3.4",
     "vue-ant-design": "^0.0.1",
