--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "ant-design-vue": "^4.0.3",
     "axios": "^1.5.1",
     "bootstrap": "5.3.1",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
     "leaflet": "^1.9.4",
     "less-loader": "^11.1.3",
     "simple-vue-camera": "^1.1.3",
     "socket.io-client": "^4.7.5",
+    "uuid": "^10.0.0",
     "video.js": "^8.10.0",
     "vue": "^3.3.4",
     "vue-ant-design": "^0.0.1",
     "vue-axios": "^3.5.2",
-    "vue-chartjs": "^5.3.0",
+    "vue-chartjs": "^5.3.1",
     "vue-icons": "^2.0.0",
     "vue-router": "^4.2.4",
     "vue3-icon": "^2.1.0"
