--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.20",
     "less": "^4.2.0",
+    "postcss": "^8.4.45",
     "sass": "^1.74.1",
+    "tailwindcss": "^3.4.11",
     "vite": "^4.4.5",
     "vite-plugin-vue": "^0.0.1",
     "vite-plugin-vue2": "^2.0.3"
